@@ -6,6 +6,9 @@ Changes in version 4.0
 
  Release Details:
   45:
+   GEMPAK bug workaround
+   Nexrad2,3 coord caching
+   COARDSConvention: withdraw "SimpleUnit.isCompatible("m", unit), must have "positive" attibute
    ncstream uses URLEncode for passing UTF-8 var names.
    N3iosp.sync() checks for numrec < 0 (isStreaming)
    Fmrc: remove global atttributes taken from random prototype dataset
